--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#9e9e9e</color>
     <color name="colorPrimaryDark">#616161</color>
     <color name="colorAccent">#212121</color>
+    <color name="white">#ffffff</color>
 </resources>
